CURIO-0003: GUI creation
- add new facelet.
- add new servlet (Faces Servlet) and mapping for it.
- add prime faces to dependencies.
- add prime faces components to curio facelet.
- add command for easy deploy package to container.
- add css to facelet.
- add command (for quick reference) to README turn off wildfly.
- exclude idea files from git.
- adjust css style.
- adjust css style and reorganize GUI components.
- add Bootfaces and demo new components.

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,12 @@ plugins {
 
 repositories {
     jcenter()
+	mavenCentral() /*required for primefaces*/
 }
 
 dependencies {
     testImplementation 'junit:junit:4.12'
 	compile 'javax:javaee-api:7.0'
+	compile 'org.primefaces:primefaces:7.0'
+	compile 'net.bootsfaces:bootsfaces:1.4.1'
 }
