--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,19 @@
 		<servlet-class>game.curio.CurioServlet</servlet-class>
 	</servlet>
 
+	<servlet>
+		<servlet-name>Faces Servlet</servlet-name>
+		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+		<load-on-startup>1</load-on-startup> <!--dont know what this is used for-->
+	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>CurioServlet</servlet-name>
 		<url-pattern>/curio</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 </web-app>
