--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+		 version="3.1">
+
+	<!--===================== SERVLETS =====================-->
 	<servlet>
 		<servlet-name>CurioServlet</servlet-name>
 		<servlet-class>game.curio.CurioServlet</servlet-class>
@@ -14,6 +16,7 @@
 		<load-on-startup>1</load-on-startup> <!--dont know what this is used for-->
 	</servlet>
 
+	<!--===================== MAPPINGS =====================-->
 	<servlet-mapping>
 		<servlet-name>CurioServlet</servlet-name>
 		<url-pattern>/curio</url-pattern>
@@ -23,4 +26,12 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+
+	<!--===================== PARAMS =====================-->
+
+	<!--for debugging only-->
+	<context-param>
+		<param-name>javax.faces.PROJECT_STAGE</param-name>
+		<param-value>Development</param-value>
+	</context-param>
 </web-app>
