--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,5 @@ dependencies {
 	compile 'javax:javaee-api:7.0'
 	compile 'org.primefaces:primefaces:7.0'
 	compile 'net.bootsfaces:bootsfaces:1.4.1'
+	compile 'org.apache.commons:commons-lang3:3.9'
 }
