LEARN-0025: Java Web Applications using Servlets
- add markdown document.
- add development guideline.
- add quick guide to test servlet request via curl.
- CurioServlet: add (other than web.xml) url pattern for request handling; handle GET and POST requests
- show case how to handle init param and request params.
- update and minor refactor document.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
 	<servlet>
 		<servlet-name>CurioServlet</servlet-name>
 		<servlet-class>game.curio.CurioServlet</servlet-class>
+		<init-param>
+			<param-name>CurioInitParamWeb</param-name>
+			<param-value>This is Curio Init Param from web.xml</param-value>
+		</init-param>
 	</servlet>
 
 	<servlet>
