--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	<!--===================== SERVLETS =====================-->
 	<servlet>
 		<servlet-name>CurioServlet</servlet-name>
-		<servlet-class>game.curio.CurioServlet</servlet-class>
+		<servlet-class>game.curio.web.CurioServlet</servlet-class>
 		<init-param>
 			<param-name>CurioInitParamWeb</param-name>
 			<param-value>This is Curio Init Param from web.xml</param-value>
