--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ dependencies {
 	compile 'org.primefaces:primefaces:7.0'
 	compile 'net.bootsfaces:bootsfaces:1.4.1'
 	compile 'org.apache.commons:commons-lang3:3.9'
+	compile 'org.hibernate:hibernate-core:5.3.11.Final'
 }
