--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ dependencies {
 	compile 'net.bootsfaces:bootsfaces:1.4.1'
 	compile 'org.apache.commons:commons-lang3:3.9'
 	compile 'org.hibernate:hibernate-core:5.3.11.Final'
+	compile 'org.mariadb.jdbc:mariadb-java-client:2.4.3'
 }
