CURIO-0006: integrate jpamodelgen and log4j
- show how to use jpamodelgen to generate static jpa datamodel in gradle
- add log4j dependency and property for it.

--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,13 @@ dependencies {
 	compile 'org.apache.commons:commons-lang3:3.9'
 	compile 'org.hibernate:hibernate-core:5.3.11.Final'
 	compile 'org.mariadb.jdbc:mariadb-java-client:2.4.3'
+	compile 'org.apache.logging.log4j:log4j-core:2.12.0'
+	annotationProcessor('org.hibernate:hibernate-jpamodelgen:5.4.4.Final')
+}
+
+def generatedMainJava = "${buildDir}/generated/main/java"
+
+compileJava {
+	// Specific to Hibernate JPA meta model generation processor.
+	options.annotationProcessorGeneratedSourcesDirectory = file(generatedMainJava)
 }
