--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 dependencies {
     testImplementation 'junit:junit:4.12'
-	compile 'javax:javaee-api:7.0'
+	compileOnly 'javax:javaee-api:7.0'
 	compile 'org.primefaces:primefaces:7.0'
 	compile 'net.bootsfaces:bootsfaces:1.4.1'
 	compile 'org.apache.commons:commons-lang3:3.9'
