CURIO-0008: REST API to connect to Steam
- I am able to connect to steam, it is because Adn is using their own proxy which somehow prevents my app from accessing steam.
- use jsoup to parse html elements to retrieve appId when search.

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	compile 'org.mariadb.jdbc:mariadb-java-client:2.4.3'
 	compile 'org.apache.logging.log4j:log4j-core:2.12.0'
 	annotationProcessor('org.hibernate:hibernate-jpamodelgen:5.4.4.Final')
+	compile 'org.jsoup:jsoup:1.12.1'
 }
 
 def generatedMainJava = "${buildDir}/generated/main/java"
