--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	compile 'org.apache.logging.log4j:log4j-core:2.12.0'
 	annotationProcessor('org.hibernate:hibernate-jpamodelgen:5.4.4.Final')
 	compile 'org.jsoup:jsoup:1.12.1'
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.9.9.3'
 }
 
 def generatedMainJava = "${buildDir}/generated/main/java"
